# k8s-health-checker

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
k8s_health_checker/: __init__.py  cli.py  demo.py  models.py  scanner.py
k8s_health_checker/checks/: __init__.py  autoscaling.py  base.py  nodes.py  pods.py  probes.py  resources.py  security.py  workloads.py
k8s_health_checker/output/: console.py  json_out.py
tests/: conftest.py  test_checks.py
